[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
lazy_static = "1.4"
futures = "0.3"
