[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
lazy_static = "1.4"
rand = "0.8"

[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization
codegen-units = 1    # better optimization
panic = "abort"      # removes unwinding
strip = true         # strips symbols (Rust 1.71+)
